fix codeblock line number misalignment problem

--- a/assets/css/prism.scss
+++ b/assets/css/prism.scss
@@ -183,10 +183,12 @@ pre[data-line] {
 	content: none;
 }
 
+/*
 span.line-numbers-rows > span {
 	position: relative;
 	bottom: 3.8px;
 }
+*/
 
 pre[id].linkable-line-numbers span.line-numbers-rows {
 	pointer-events: all;
@@ -207,6 +209,7 @@ pre[class*="language-"].line-numbers {
 pre[class*="language-"].line-numbers > code {
 	position: relative;
 	white-space: inherit;
+	display: block;
 }
 
 .line-numbers .line-numbers-rows {
